Additional Work on Name, Routing.

--- a/Clangen/Clangen.csproj
+++ b/Clangen/Clangen.csproj
@@ -32,4 +32,10 @@
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Resources\**">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
