--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,15 @@ jobs:
   # Run unittest tests.
   unittest:
     runs-on: windows-latest
+    strategy:
+      matrix:
+        dotnet-version: [ '7.x', '8.x' ]
     steps:
-      - uses: actions/checkout@v3
-      - run: dotnet test
-      
+      - uses: actions/checkout@v4
+      - name: Setup dotnet ${{ matrix.dotnet-version }}
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: ${{ matrix.dotnet-version }}
+      # You can test your matrix by printing the current dotnet version
+      - name: Display dotnet version
+        run: dotnet --version
