--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,5 +18,9 @@ jobs:
       # You can test your matrix by printing the current dotnet version
       - name: Display dotnet version
         run: dotnet --version
+      - name: Install dependencies 
+        run: dotnet restore
+      - name: Build
+        run: dotnet build
       - name: Run UnitTest
         run: dotnet test
