--- a/Clangen/Clangen.csproj
+++ b/Clangen/Clangen.csproj
@@ -8,7 +8,7 @@
 
   
   <ItemGroup>
-    <AvaloniaResource Include="Assets\**" />
+    <AvaloniaResource Include="Assets/**" />
   </ItemGroup>
 
   <ItemGroup>
