--- a/Clangen/Clangen.csproj
+++ b/Clangen/Clangen.csproj
@@ -22,6 +22,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Sandreas.Avalonia.SimpleRouter" Version="0.0.3" />
     <PackageReference Include="SkiaSharp" Version="2.88.6" />
+    <PackageReference Include="TestableIO.System.IO.Abstractions.Wrappers" Version="20.0.15" />
+	<PackageReference Include="TestableIO.System.IO.Abstractions.TestingHelpers" Version="20.0.15" />
   </ItemGroup>
 
   <ItemGroup>
